# syllable

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  export_to_onnx.py  extract_weights.py  interactive_test.py  model_speed_test.py  pyproject.toml  syllable_model_weights.json  test_model_only.exs
onnx_export/: README.md  csharp_example.cs  javascript_example.js  model_metadata.json  python_example.py
syllable/: syllable_counters.py
syllable_elixir/: README.md  mix.exs  simple_test.exs  test_syllable.exs
syllable_elixir/config/: config.exs
syllable_elixir/lib/: syllable_elixir.ex
syllable_elixir/lib/syllable_elixir/: application.ex  char_encoder.ex  counter.ex  dictionary.ex  model.ex  pattern_fallback.ex  router.ex
